logs/django-zipkin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_zipkin'...
Listing './lib/python3.5/site-packages/django_zipkin/_thrift'...
Listing './lib/python3.5/site-packages/django_zipkin/_thrift/scribe'...
Listing './lib/python3.5/site-packages/django_zipkin/_thrift/zipkinCollector'...
Compiling './lib/python3.5/site-packages/django_zipkin/_thrift/zipkinCollector/ZipkinCollector.py'...
***   File "./lib/python3.5/site-packages/django_zipkin/_thrift/zipkinCollector/ZipkinCollector.py", line 178
    except StoreAggregatesException, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_zipkin/_thrift/zipkinCore'...
Listing './lib/python3.5/site-packages/django_zipkin/_thrift/zipkinDependencies'...
Listing './lib/python3.5/site-packages/django_zipkin/_thrift/zipkinQuery'...
Compiling './lib/python3.5/site-packages/django_zipkin/_thrift/zipkinQuery/ZipkinQuery.py'...
***   File "./lib/python3.5/site-packages/django_zipkin/_thrift/zipkinQuery/ZipkinQuery.py", line 1015
    except QueryException, qe:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_zipkin/tests'...
Listing './lib/python3.5/site-packages/django_zipkin-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
